<resources>
    <string name="app_name">Paint</string>
    <string name="circle">Circle</string>
    <string name="rectangle">Rectangle</string>
    <string name="back_color">Back Color</string>
    <string name="line_color">Line Color</string>
    <string name="oval">Oval</string>
    <string name="square">Square</string>
    <string name="line">Line</string>
    <string name="line_weight">Line weight</string>
    <string name="clear">Clear</string>
    <string name="open">Open</string>
    <string name="save">Save</string>
    <string name="back">Back</string>
    <string name="show_tools">show tools</string>
</resources>