<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <com.last.paint.CanvasView
        android:id="@+id/canvas_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true" />

    <LinearLayout
        android:id="@+id/side_menu"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:orientation="vertical">

        <Button
            android:id="@+id/circle_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/circle" />

        <Button
            android:id="@+id/oval_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/oval" />

        <Button
            android:id="@+id/square_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/square" />

        <Button
            android:id="@+id/rectangle_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rectangle" />

        <Button
            android:id="@+id/line_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/line" />

        <Button
            android:id="@+id/line_color_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/line_color" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/line_weight" />

        <SeekBar
            android:id="@+id/line_thickness_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="10"
            android:progress="5" />

        <Button
            android:id="@+id/back_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/back" />

    </LinearLayout>

</RelativeLayout>