<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/show_tools"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title="@string/show_tools"
        app:showAsAction="ifRoom|withText" />
    <item
        android:id="@+id/open"
        android:title="@string/open"
        app:showAsAction="ifRoom|withText"
        tools:icon="@android:drawable/ic_menu_gallery" />
    <item
        android:id="@+id/save"
        android:icon="@android:drawable/ic_menu_save"
        android:title="@string/save"
        app:showAsAction="ifRoom|withText" />
    <item
        android:id="@+id/clear"
        android:icon="@android:drawable/ic_notification_clear_all"
        android:title="@string/clear"
        app:showAsAction="ifRoom|withText" />
</menu>